Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Vehicle framework: Scheduled precondition control with duration support
    Centralized implementation for all vehicles with per-vehicle override capability.
    Supports multiple time slots per day with individual duration settings (5-30 minutes).
    Global enable/disable switch with config persistence.
    copy function to duplicate schedules across multiple days.
  New commands:
    climatecontrol schedule set <day> <times>  -- Set schedule for a day, times format: HH:MM[/duration][,HH:MM[/duration],...]
                                                     Examples: "07:30", "07:30/10", "07:00/5,17:30/15"
                                                     Duration in minutes
    climatecontrol schedule list               -- List all configured schedules with next scheduled event
    climatecontrol schedule clear <day|all>    -- Clear schedule for specific day or all days
    climatecontrol schedule copy <source-day> <target-days>
                                               -- Copy schedule from one day to others
                                                     Examples: "mon tue-fri", "fri sat,sun"
                                                     Supports range syntax (tue-fri) and comma-separated lists
    climatecontrol schedule enable             -- Enable scheduled precondition (global switch)
    climatecontrol schedule disable            -- Disable scheduled precondition (global switch)
    climatecontrol schedule status             -- Show schedule status and configured times
  New config:
    [vehicle] climate.schedule.<day>           -- Schedule for day (mon/tue/wed/thu/fri/sat/sun)
                                                  Format: HH:MM[/duration][,HH:MM[/duration],...]
    [vehicle] climate.precondition             -- Enable/disable scheduled precondition (bool, default false)
  precondition scheduler features: (ported from ZOE PH2)